lib/bmc_audio_windows_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/bmc_audio_windows.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class BmcAudioWindowsBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BmcAudioWindowsBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BmcAudioWindowsBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  // ============================================================================
  // Playback
  // ============================================================================

  void startBackgroundPlayer(int sampleRate, int channels, int numberPrepareHeader) {
    return _startBackgroundPlayer(sampleRate, channels, numberPrepareHeader);
  }
  late final _startBackgroundPlayerPtr = _lookup<
      ffi.NativeFunction<ffi.Void Function(ffi.Int32, ffi.Int32, ffi.Int32)>>(
      'startBackgroundPlayer');
  late final _startBackgroundPlayer =
      _startBackgroundPlayerPtr.asFunction<void Function(int, int, int)>();

  void startBackgroundPlayerWithDevice(int sampleRate, int channels, int numberPrepareHeader, int deviceIndex) {
    return _startBackgroundPlayerWithDevice(sampleRate, channels, numberPrepareHeader, deviceIndex);
  }
  late final _startBackgroundPlayerWithDevicePtr = _lookup<
      ffi.NativeFunction<ffi.Void Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32)>>(
      'startBackgroundPlayerWithDevice');
  late final _startBackgroundPlayerWithDevice =
      _startBackgroundPlayerWithDevicePtr.asFunction<void Function(int, int, int, int)>();

  int push_pcm_data(ffi.Pointer<ffi.Uint8> data, int length) {
    return _push_pcm_data(data, length);
  }
  late final _push_pcm_dataPtr = _lookup<
      ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Int32)>>(
      'push_pcm_data');
  late final _push_pcm_data =
      _push_pcm_dataPtr.asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  void end_pcm_push() {
    return _end_pcm_push();
  }
  late final _end_pcm_pushPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('end_pcm_push');
  late final _end_pcm_push =
      _end_pcm_pushPtr.asFunction<void Function()>();

  // ============================================================================
  // Device Enumeration
  // ============================================================================

  int getOutputDeviceCount() {
    return _getOutputDeviceCount();
  }
  late final _getOutputDeviceCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('getOutputDeviceCount');
  late final _getOutputDeviceCount =
      _getOutputDeviceCountPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> getOutputDeviceName(int index) {
    return _getOutputDeviceName(index);
  }
  late final _getOutputDeviceNamePtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
      'getOutputDeviceName');
  late final _getOutputDeviceName =
      _getOutputDeviceNamePtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<ffi.Char> getOutputDeviceId(int index) {
    return _getOutputDeviceId(index);
  }
  late final _getOutputDeviceIdPtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
      'getOutputDeviceId');
  late final _getOutputDeviceId =
      _getOutputDeviceIdPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  int getInputDeviceCount() {
    return _getInputDeviceCount();
  }
  late final _getInputDeviceCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('getInputDeviceCount');
  late final _getInputDeviceCount =
      _getInputDeviceCountPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> getInputDeviceName(int index) {
    return _getInputDeviceName(index);
  }
  late final _getInputDeviceNamePtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
      'getInputDeviceName');
  late final _getInputDeviceName =
      _getInputDeviceNamePtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<ffi.Char> getInputDeviceId(int index) {
    return _getInputDeviceId(index);
  }
  late final _getInputDeviceIdPtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
      'getInputDeviceId');
  late final _getInputDeviceId =
      _getInputDeviceIdPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();
}
